fixed navbar so it doesn't scale when page overflows

--- a/src/app/(dashboard)/styles.module.css
+++ b/src/app/(dashboard)/styles.module.css
@@ -23,6 +23,9 @@
     align-items: center;
     padding-top: 4rem;
     font-size: 3rem;
+    height: 100vh;
+    position: sticky;
+    top: 0;
 
     & .navlinks {
         width: 100%;
